--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	.mui-bar-tab .mui-tab-item.mui-active{color: #2b70d8;}
 </style>
 <body>
-	<nav class="mui-bar mui-bar-tab">
+	<nav class="mui-bar mui-bar-tab" id='bottomx'>
 	    <a id="defaultTab" class="mui-tab-item mui-active a_d" href="sy.html">
 	        <span class="mui-icon iconfont icon-shouye"></span>
 	        <span class="mui-tab-label">首页</span>
@@ -147,6 +147,11 @@
 			activeTab = subpages[idx]
 		});
 		
+		//底部菜单被键盘顶起
+		mui.plusReady(function() {
+            //设置bottom绝对位置
+            document.getElementById('bottomx').style.top = (plus.display.resolutionHeight - 50) + "px";
+        });
 		
     </script>
 </body>
