--- a/qyhl.html
+++ b/qyhl.html
@@ -195,9 +195,9 @@
 		    				    shtml+='立即咨询';
 		    				    shtml+="</a>";
 		    				    shtml+='</span>';
-		    				    shtml+='<span class="shijanrq">';
-		    				    shtml+=createTime;
-		    				    shtml+='</span>';
+//		    				    shtml+='<span class="shijanrq">';
+//		    				    shtml+=createTime;
+//		    				    shtml+='</span>';
 		    			        shtml+='</div>';
 		    			        shtml+='<div style="width: 2.773333rem;height: 3.226666rem;position: absolute;top: -0.16rem;right: -0.213333rem;background:  url('+imgUrl+' ) no-repeat;background-size: 100% 100%;box-shadow:0px 0px 18px #dedede;" > </div> </li>';
 							}
