--- a/jxfy.html
+++ b/jxfy.html
@@ -143,7 +143,7 @@
 				mui.fire(main, "saixuankzqt",{
 				    idxsaixuan:1//1位置
 				})
-				var index = plus.webview.getWebviewById('index');
+				var index = plus.webview.getLaunchWebview();
 				mui.fire(index, "weizhi1",{
 				    idxid:1//1位置
 				})
