--- a/qyhl.html
+++ b/qyhl.html
@@ -10,7 +10,6 @@
 		<script type="text/javascript" src="js/lib/flexible.js"></script>
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/qiYeHuLian.css"/>
-		<link rel="stylesheet" type="text/css" href="css/style_a_d.css"/>
 		<style>
 			a{
 				text-decoration: none;
@@ -190,7 +189,7 @@
 		    			        shtml+='<div class="lijicx">';
 		    				    shtml+='<span class="lijiztti">';
 		    				    //调用手机通讯录
-		    				    shtml+='<a class="a_d" href="tel:';
+		    				    shtml+='<a href="tel:';
 		    				    shtml+=butlerPhone;
 		    				    shtml+='" >';
 		    				    shtml+='立即咨询';
@@ -265,7 +264,7 @@
 		    			        if(status!=2){
 									dhtml+='<span class="lijiztti">';
 			    				    //调用手机通讯录
-			    				    dhtml+='<a class="a_d" href="tel:';
+			    				    dhtml+='<a href="tel:';
 			    				    dhtml+=butlerPhone;
 			    				    dhtml+='" >';
 			    				    dhtml+='立即咨询';
