--- a/jxfyList.html
+++ b/jxfyList.html
@@ -20,7 +20,7 @@
 		.xuanxing .xiaokuai,.xuanxing .xiaokzujin,.xuanxing .xiaokchuaq{font-size: 0.346666rem;}
 	</style>
 	<body>
-		<!--遮罩层-->
+		<!--遮罩层2-->
 		<div class="zhezhaoceshx zhezhaocdisplayshx">
 			<div class="zzcnershx">
 				<div class="mianjilag">
@@ -581,7 +581,6 @@
 		        $(".listUl").css({
 		            'height': hegh+'px',
 		        });
-				
 			});
 
 			//遮罩层消失恢复滚动
